# template_vite

backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/.claude/: settings.local.json
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py
backend/app/: celery_app.py  config.py  database.py  main.py  redis.py
backend/app/api/: auth.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/app/services/: auth.py
frontend/: .env.example  ARCHITECTURE.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: AppRouter.tsx  Layout.tsx  Providers.tsx  ThemeInitializer.tsx
frontend/src/components/: ErrorBoundary.tsx  Header.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/components/ui/: button.tsx  dialog.tsx
frontend/src/features/auth/: authSlice.ts
frontend/src/features/ui/: uiSlice.ts
frontend/src/hooks/: useAuth.ts  useTheme.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  NotFound.tsx  Profile.tsx  Settings.tsx
frontend/src/store/: apiSlice.ts  index.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
